# Atomic-Spec

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  atomic-traceability-model.md  init-project.ps1  init-project.sh  pyproject.toml  spec-driven.md
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  release.yml  site.yml
.specify/docs/: platform-tagging-design.md
.specify/knowledge/: _platform-integration.md  _platform-registry.yaml  _platform-resolution.md
.specify/knowledge/stations/: 00-station-map.md  01-discovery.md  01-introduction.md  02-prd-spec.md  02-roles-ownership.md  03-discovery.md  03-user-flows.md  04-api-contracts.md  04-prd-spec.md  05-data-architecture.md  05-user-flows.md  06-api-contracts.md  06-auth-rbac.md  07-billing.md  07-data-architecture.md  08-auth-rbac.md  08-metering-limits.md  09-billing.md  09-observability.md  10-cicd-release.md  10-metering-limits.md  11-observability.md  11-security.md  12-cicd-release.md  12-data-lifecycle.md  13-security.md  14-data-lifecycle.md  15-performance.md  16-analytics.md  17-admin-tooling.md  18-documentation.md
.specify/subagents/: _index.md  _template.md  api-documenter.md  architect-reviewer.md  backend-architect.md  code-reviewer.md  data-engineer.md  database-admin.md  database-optimizer.md  deployment-engineer.md  error-detective.md  frontend-developer.md  mobile-developer.md  payment-integration.md  performance-engineer.md  python-pro.md  typescript-pro.md
.specify/subagents/ai/: prompt-engineer.md
.specify/subagents/backend/: backend-architect.md  payment-integration.md
.specify/subagents/business/: business-analyst.md
.specify/subagents/custom/: .gitkeep
.specify/subagents/data/: data-architecture.md  data-engineer.md  database-admin.md
.specify/subagents/devops/: performance-engineer.md
.specify/subagents/frontend/: ui-ux-designer.md
.specify/subagents/mobile/01-discovery/: budget-timeline.md  business-model.md  market-research.md  mvp-scope.md  platform-choice.md  problem-solution-fit.md  success-metrics.md  target-audience.md
.specify/subagents/mobile/02-requirements/: functional-requirements.md  non-functional-requirements.md  project-management.md  risk-assessment.md  team-composition.md  tech-stack-selection.md  technical-feasibility.md  third-party-services.md
.specify/subagents/mobile/03-ux-ui/: accessibility-design.md  dark-mode-theming.md  design-handoff.md  information-architecture.md  micro-interactions.md  platform-guidelines.md  prototyping.md  responsive-layouts.md  usability-testing.md  visual-design-system.md  wireframing.md
.specify/subagents/mobile/04-architecture/: api-design.md  auth-strategy.md  caching-strategy.md  code-architecture.md  database-schema.md  error-logging-architecture.md  file-storage.md  offline-architecture.md  push-architecture.md  realtime-communication.md  state-management.md  system-architecture.md
.specify/subagents/mobile/05-backend/: access-control.md  admin-panel.md  api-development.md  background-jobs.md  database-implementation.md  file-handling.md  notification-service.md  rate-limiting.md  search-functionality.md  server-setup.md  user-authentication.md  webhooks.md
.specify/subagents/mobile/06-frontend-mobile/: animations.md  api-integration.md  deep-linking.md  device-features.md  form-handling.md  (+13 more)
docs/: KNOWLEDGE-WIRING-PLAN.md  README.md  VERIFICATION-COMMANDS-GUIDE.md  docfx.json  index.md  installation.md  local-development.md  mobile-extension-audit.md  mobile-extension-plan.md  mobile-subagents-report.md  quickstart.md  upgrade.md  verification-fallback-logic.md
docs/internal/: README.md  mobile-extension-audit.md  mobile-extension-plan.md
memory/: constitution.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  migrate-legacy-tasks.sh  setup-plan.sh  update-agent-context.sh  validate-tech-stack.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  migrate-legacy-tasks.ps1  setup-plan.ps1  update-agent-context.ps1  validate-tech-stack.ps1
site/: .gitignore  COPY.md  README.md  astro.config.mjs  package-lock.json  package.json
site/src/: content.config.ts
site/src/layouts/: BaseLayout.astro  DocsLayout.astro
site/src/lib/: nav.ts  url.ts
site/src/pages/: 404.astro  index.astro
site/src/styles/: global.css  prose.css
src/specify_cli/: __init__.py  _config.py
templates/: atomic-task-template.md  checklist-template.md  competitive-analysis-summary-template.md  competitor-template.md  index-template.md  plan-template.md  registry-changelog-template.md  registry-readme-template.md  registry-template.yaml  spec-template.md  tasks-template.md  traceability-template.md  verification-commands.yaml  vscode-settings.json
templates/commands/: _registry-protocol.md  _subagent-discovery.md  analyze-competitors.md  analyze.md  checklist.md  clarify.md  cleanup.md  constitution.md  implement.md  plan.md  registry.md  specify.md  tasks.md
templates/examples/: T-020-implement-ios-auth-service.md  T-025-implement-auth-service-ios.md
(+113 files in other folders)
