[project]
name = "atomic-spec"
version = "0.1.1"
description = "Atomic Traceability for AI-Driven Development — a governance framework that constrains AI coding agents via gated, atomic, context-pinned phases."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Mohammad Khoddami", email = "chappygoweb@gmail.com" },
]
maintainers = [
    { name = "Mohammad Khoddami", email = "chappygoweb@gmail.com" },
]
keywords = [
    "spec-driven-development",
    "sdd",
    "ai-agents",
    "ai-coding",
    "claude-code",
    "cursor",
    "github-copilot",
    "gemini",
    "windsurf",
    "llm-tools",
    "context-engineering",
    "traceability",
    "atomic-traceability",
    "atomic-tasks",
    "governance",
    "scaffolding",
    "cli",
    "spec-kit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.urls]
Homepage      = "https://github.com/Chappygo-OS/Atomic-Spec"
Repository    = "https://github.com/Chappygo-OS/Atomic-Spec"
Issues        = "https://github.com/Chappygo-OS/Atomic-Spec/issues"
Documentation = "https://github.com/Chappygo-OS/Atomic-Spec#readme"
Changelog     = "https://github.com/Chappygo-OS/Atomic-Spec/releases"

[project.scripts]
atomicspec = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

# Source distribution — defense-in-depth exclude. The wheel above already only
# ships `src/specify_cli/`, but the sdist defaults to "everything tracked in git"
# unless we exclude. None of the framework's install paths consume the sdist
# (uv/pip install from the wheel, atomicspec init downloads release zips, and
# init-project.sh copies specific dirs only) — but the sdist is what gets
# uploaded to PyPI alongside the wheel for archival, so keep it small and
# scrub anything frontend-toolchain-shaped.
[tool.hatch.build.targets.sdist]
exclude = [
  "site/",            # Astro marketing + docs site (built by GitHub Action)
  "webpage/",         # boss's old React landing source — never tracked anyway
  "assets/",          # branding assets (banner / icon) — only used by site/
  "docs/internal/",   # contributor archaeology, not for end users
  ".github/",         # CI workflows
  ".devcontainer/",   # local dev container config
  "node_modules/",    # never tracked but defensive
]
